# stardoc

./: .bazelignore  .bazelrc  .gitignore  BUILD  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  bazel.patch  deps.bzl  distro-manual-test.sh  legacy_maven_install.json  maven_install.json  rules_jvm_external.patch  serve-docs.sh  setup.bzl  update-release-binary.sh  update-stardoc-docs.sh  update-stardoc-tests.sh  version.bzl
.bazelci/: presubmit.yml
.bcr/: config.yml  metadata.template.json  source.template.json
.github/workflows/: create_archive_and_notes.sh  release.yml
distro/: BUILD  distro.bzl
docs/: advanced_stardoc_usage.md  contributing.md  future_plans.md  generating_stardoc.md  getting_started_stardoc.md  maintainers_guide.md  rendering_without_cc_toolchain.md  skydoc_deprecation.md  stardoc_rule.md  writing_stardoc.md
site/: BUILD  CNAME  contributing.md  index.html  jekyll-tree.sh  roadmap.md  search.html
site/_includes/: drawer.html  head.html  header.html
site/_layouts/: home.html
site/_sass/: base.scss  docs.scss  drawer.scss  home.scss  syntax.scss
site/css/: docs.scss  home.scss
site/docs/: faq.md  generating.md  generating_stardoc.md  getting_started.md  getting_started_stardoc.md  skydoc_deprecation.md  writing.md  writing_stardoc.md
skydoc/: BUILD  build.proto  common.py  common_test.py  load_extractor.py  load_extractor_test.py  macro_extractor.py  macro_extractor_test.py  main.py  rule.py  rule_extractor.py  rule_extractor_test.py
skydoc/sass/: BUILD  main.scss
skydoc/stubs/: BUILD  attr.py  skylark_globals.py
skydoc/templates/: BUILD  attributes.jinja  html.jinja  html_footer.jinja  html_header.jinja  html_overview.jinja  markdown.jinja  markdown_overview.jinja  nav.jinja  outputs.jinja  overview.jinja  toc.jinja
skylark/: BUILD  skylark.bzl
stardoc/: BUILD  html_tables_stardoc.bzl  pure_markdown_stardoc.bzl  stardoc.bzl  stardoc_with_diff_test.bzl
stardoc/private/: BUILD  stamp_detector.bzl  stardoc.bzl
stardoc/proto/: BUILD  stardoc_output.proto
stardoc/pure_markdown_templates/: aspect.vm  func.vm  provider.vm  rule.vm
stardoc/templates/html_tables/: aspect.vm  func.vm  macro.vm  module_extension.vm  provider.vm  repository_rule.vm  rule.vm
stardoc/templates/markdown_tables/: aspect.vm  func.vm  header.vm  macro.vm  module_extension.vm  provider.vm  repository_rule.vm  rule.vm  table_of_contents.vm
test/: BUILD  self_doc_golden.md  stardoc_test.bzl
test/bzlmod/: .bazelrc  BUILD  MODULE.bazel  def.bzl  docs.md.golden  docs_golden.md
test/no_cc_toolchain/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  stardoc_rule.md
test/no_cc_toolchain/toolchains/: BUILD.bazel  empty_cc_toolchain_config.bzl
test/nobzlmod/: .bazelrc  BUILD  WORKSPACE  def.bzl  docs.md.golden
test/testdata/android_basic_test/: golden.md  golden.txt  input.bzl
test/testdata/angle_bracket_test/: golden.md  golden.txt  input.bzl  legacy_golden.md
test/testdata/apple_basic_test/: golden.md  golden.txt  input.bzl
test/testdata/aspect_test/: golden.md  input.bzl  legacy_golden.md
test/testdata/attribute_defaults_test/: golden.md  input.bzl  legacy_golden.md
test/testdata/attribute_types_test/: golden.md  input.bzl  legacy_golden.md
test/testdata/cc_api_test/: golden.md  golden.txt  input.bzl
test/testdata/config_apis_test/: golden.md  input.bzl
test/testdata/cpp_basic_test/: golden.md  input.bzl
test/testdata/fakedeps/: dep.bzl
test/testdata/filter_rules_test/: dep.bzl  golden.md  golden.txt  input.bzl
test/testdata/footer_test/: footer_template.vm  golden.md  input.bzl
test/testdata/function_basic_test/: golden.md  golden.txt  input.bzl
test/testdata/function_wrap_multiple_lines_test/: golden.md  input.bzl  legacy_golden.md
test/testdata/generated_bzl_test/: golden.md
test/testdata/html_tables_template_test/: golden.md  golden.txt  input.bzl
test/testdata/input_template_test/: aspect.vm  func.vm  golden.md  input.bzl  provider.vm  rule.vm
test/testdata/java_basic_test/: golden.md  golden.txt  input.bzl  legacy_golden.md
test/testdata/local_repository_test/: BUILD  WORKSPACE  golden.md  golden.txt  input.bzl
test/testdata/macro_kwargs_test/: golden.md  input.bzl  legacy_golden.md
test/testdata/misc_apis_test/: golden.md  golden.txt  input.bzl
test/testdata/module_extension_test/: golden.md  input.bzl  legacy_golden.md
test/testdata/multi_level_namespace_test/: golden.md  input.bzl  legacy_golden.md
test/testdata/multi_level_namespace_test_with_allowlist/: golden.md  input.bzl
test/testdata/multi_level_namespace_test_with_whitelist/: golden.md  golden.txt  input.bzl
test/testdata/multiple_files_test/: dep.bzl  golden.md  inner_dep.bzl  input.bzl  noenable_bzlmod_golden.md
test/testdata/multiple_rules_test/: golden.md  golden.txt  input.bzl
test/testdata/namespace_test/: golden.md  golden.txt  input.bzl  legacy_golden.md
test/testdata/proto_format_test/: golden.binaryproto  input.bzl
test/testdata/provider_basic_test/: golden.md  golden.txt  input.bzl  legacy_golden.md
test/testdata/providers_for_attributes_test/: dep.bzl  (+2 more)
toolchains/: BUILD.bazel
(+41 files in other folders)
